--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="icon" href="/favicon.ico"/><title>Luis</title><script async src="https://www.googletagmanager.com/gtag/js?id=G-5LBNH722JB"></script><script>window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-5LBNH722JB");</script><script defer="defer" src="/js/chunk-vendors.5392bfbe.js"></script><script defer="defer" src="/js/app.43de57aa.js"></script><link href="/css/chunk-vendors.509dca92.css" rel="stylesheet"><link href="/css/app.39036131.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but Luis doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!doctype html><html lang=""><head><meta charset="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="icon" href="/favicon.ico"/><title>Luis</title><script defer="defer" src="/js/chunk-vendors.11aec937.js"></script><script defer="defer" src="/js/app.71cba01c.js"></script><link href="/css/chunk-vendors.1c87f2e4.css" rel="stylesheet"><link href="/css/app.b50b14f4.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but Luis doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
